# dotfiles

./: .gitignore  .gitmodules  AGENTS.md  catppuccin_grey.txt  gitmux.yaml  glow-custom.json  install.sh  short-md.prompt  short-md.prompt.bak  test.py  tmux.terminfo  userChrome.css  walcache
X11/: .xinitrc
alacritty/: alacritty.toml  alacritty.yml
awesome/: catppuccin.lua  rc.lua
awesome/catppuccin-custom/: theme.lua
git/: config  git-credential-bw
helix/: config.toml
hypr/: hypr  hyprland.conf  hyprpaper.conf
kitty/: colors-kitty.conf  kitty.conf  mocha.conf
kmonad/: murtaza.kbd  testing.kbd  thinkpad_T430_iso.kbd
mako/: config
mixxx/: mixxx.cfg
mixxx/controllers/: Hercules-DJControl Inpulse 300 - Murtaza.midi.xml  hercules-inpulse-300-murtaza.js
numpad-midi/: numpad_midi_appindicator.py  numpad_midi_virmidi.py  pyproject.toml
nvim/: init.lua  neovim-nightly.rb
nvim/after/: svelte.lua
nvim/ftplugin/: lua.lua  (+1 more)
opencode/: AGENTS.md  opencode.jsonc
picom/: picom.conf
qmk/: qmk.ini
rofi/: catppuccin-mocha.rasi
tab-search-extension/: background.js  content.js  manifest.json  overlay.css
tmux/: catppuccin.tmux  theme.py  theme.tmux  tmux.conf
waybar/: config  style.css
wezterm/: wezterm.lua
wofi/: config  style.css  wallpaper.conf  wallpaper.css  wofi-wallpaper
xonsh/: rc.xsh
zsh/: .p10k.zsh  .zshrc  .zshrc-template  aliases.zsh  atuin.zsh  completion.zsh  git.zsh  history.zsh  key-bindings.zsh  murtaza.zsh-theme  rcnt  rcnt.fake  rcnt.py  rcnt.zsh  rcnt.zsh.disabled  termsupport.zsh  theme-and-appearance.zsh  zshrc-global
(+67 files in other folders)
